lib/NodeExploitSynthesis/tests/enumerator_integration/test2/analysis.out
tsc -b
node --trace-uncaught --stack-trace-limit=20 lib/jalangi2-babel/src/js/commands/jalangi.js --analysis src/rewrite.js lib/NodeExploitSynthesis/tests/enumerator_integration/test2/driver.js log_level=warn policies=object:precise,string:precise,array:precise taint_paths=true taint_paths_json=true honeyobjects=true assert_passed=false eval_sink=
Browserslist: caniuse-lite is outdated. Please run:
npx browserslist@latest --update-db

Why you should do it regularly:
https://github.com/browserslist/browserslist#browsers-data-updating
/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:515
            throw tmp;
            ^

Error: Sink function eval reached with tainted argument [String: 'function [

    at Object.Just (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/modules/Eval.js:117:27)
    at exports.F.F.matchMaybe (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/Flib.js:43:32)
    at TEvalPolicy (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/modules/Eval.js:109:18)
    at EvalApplyRewritePolicy (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/modules/Eval.js:90:9)
    at TEvalPre (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/Taint.js:333:46)
    at Instrumentation.instrumentCodePre (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/Base.js:295:64)
    at MyAnalysis.instrumentCodePre (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/rewrite.js:145:39)
    at instrumentCode (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/instrument/esnstrument.js:1949:37)
    at Object.instrumentEvalCode (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/instrument/esnstrument.js:1913:16)
    at api (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/NodeExploitSynthesis/tests/enumerator_integration/test2/driver.js:15:48)
    at callFun (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:196:51)
    at invokeFun (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:217:22)
    at /Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:233:41
    at Object.<anonymous> (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/NodeExploitSynthesis/tests/enumerator_integration/test2/driver.js:30:62)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
    at Module._extensions..js (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:109:12)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:81:12)
    at startProgram (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:121:19)
    at MyAnalysis.onReady (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/rewrite.js:161:13)
    at Object.<anonymous> (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:125:17)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:81:12)
    at node:internal/main/run_main_module:23:47
Thrown at:
    at Just (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/modules/Eval.js:117:27)
    at exports.F.F.matchMaybe (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/Flib.js:43:32)
    at TEvalPolicy (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/modules/Eval.js:109:18)
    at EvalApplyRewritePolicy (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/modules/Eval.js:90:9)
    at TEvalPre (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/Taint.js:333:46)
    at Instrumentation.instrumentCodePre (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/Base.js:295:64)
    at MyAnalysis.instrumentCodePre (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/src/rewrite.js:145:39)
    at instrumentCode (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/instrument/esnstrument.js:1949:37)
    at instrumentEvalCode (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/instrument/esnstrument.js:1913:16)
    at api (/Volumes/ext/projects/javascript-analysis/NodeExploitAnalysis/lib/NodeExploitSynthesis/tests/enumerator_integration/test2/driver.js:15:48)


Node.js v18.17.0
make: *** [analyze] Error 1
